--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
@@ -20,6 +20,10 @@ default: &default
 development:
   <<: *default
   database: furima_39699_development
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,6 +31,10 @@ development:
 test:
   <<: *default
   database: furima_39699_test
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -53,3 +61,5 @@ production:
   database: furima_39699_production
   username: furima_39699
   password: <%= ENV["FURIMA_39699_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
